--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,6 +1,8 @@
 bump2version>=1.0.1
 Click>=7.0
 coverage>=7.2.2
+numpy>=1.24.3
+pandas >= 1.5.0
 pip>=19.2.3
 pre-commit>=2.15.0
 pytest-cov>=4.0.0
@@ -9,5 +11,6 @@ pytest>=7.0.0
 recommonmark>=0.6.0
 requests>=2.28.0
 ruff>=0.2.2
+scikit-learn >= 1.2.2
 sphinx>=6.0
 wheel>=0.33.6
